--- a/store/templates/login.html
+++ b/store/templates/login.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,7 +27,7 @@
             background: #fff;
             padding: 35px;
             border-radius: 12px;
-            box-shadow: 0 0 20px rgba(0,0,0,0.1);
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
         }
 
         h2 {
@@ -75,14 +76,20 @@
             background: #0056b3;
         }
 
+
         .error {
             color: red;
             text-align: center;
             margin-bottom: 10px;
             font-size: 14px;
         }
+
+        .forgot-box{
+            margin-top: 10px;
+        }
     </style>
 </head>
+
 <body>
 
     <div class="login-container">
@@ -90,9 +97,9 @@
         <h2>Admin Login</h2>
 
         {% if messages %}
-            {% for msg in messages %}
-                <p class="error">{{ msg }}</p>
-            {% endfor %}
+        {% for msg in messages %}
+        <p class="error">{{ msg }}</p>
+        {% endfor %}
         {% endif %}
 
         <form method="POST">
@@ -109,9 +116,15 @@
             </div>
 
             <button type="submit" class="btn">Login</button>
+
+            <div class="forgot-box">
+                <a href="{% url 'forgot_password' %}">Forgot Password?</a>
+            </div>
         </form>
+
 
     </div>
 
 </body>
+
 </html>
